<resources>
    <string name="app_name">Classmate</string>
    <string name="action_settings">settings</string>
    <string name="empty_not_saved">Class was not saved because it is empty</string>
    <string name="add_class_hint">Class Name…</string>
    <string name="button_save">Save</string>
    <string name="color_button">Select Color</string>
    <string name="icon_button">Select Icon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_course_dialog">Add Class</string>
    <string name="button_cancel">Cancel</string>
    <string name="invalid_course">Invalid Course!</string>
    <string name="empty_course_list">Nothing here, try adding a course!</string>
    <string name="empty_assignment_list">Nothing here, try adding an assignment!</string>
    <string name="add_assignment_hint">Assignment Name…</string>
    <string name="assignment_complete">Mark Complete</string>
    <string name="empty_description">No Description yet.</string>
    <string name="set">Set</string>
    <string-array name="priority_array">
        <item>TOP</item>
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
        <item>BOTTOM</item>
    </string-array>
    <string name="dialog_title_delete_course">Delete Course?</string>
    <string name="button_delete" translatable="false">Delete</string>
    <string name="title_description">DESCRIPTION</string>
    <string name="title_due_date">DUE DATE</string>
    <string name="title_create_date">CREATE DATE</string>
    <string name="title_reminder">REMINDER</string>
    <string name="title_priority">PRIORITY</string>
    <string name="dialog_title_delete_assignment">Delete Assignment?</string>
    <string name="title_grade">GRADE</string>
    <string name="reminder_null">No Reminder Set!</string>
    <string name="days_left_gt_one">Due in %1$d days!</string>
    <string name="days_left_lt_zero">Due %1$d days ago!</string>
    <string name="days_left_one">Due tommorow!</string>
    <string name="days_left_zero">Due today!</string>
    <string name="one_hundred">100</string>
    <string name="grade_value">"%1$d out of %2$d "</string>
    <string name="button_complete">Completed on %1$s</string>
    <string name="out_of">out of</string>
    <string name="rename_class">Rename Class</string>
    <string name="recolor_course">Change color</string>
    <string name="invalid_grade">Must enter grade values!</string>
    <string name="invalid_assignment">Invalid Assignment!</string>
    <string name="no_grade">No-Grade</string>
    <string name="set_grade">Set Grade</string>
    <string name="no_grade_yet">No grade yet!</string>
    <string name="notification_message">A reminder for %1$s from %2$s class has gone off!</string>
</resources>
