<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/grade_points"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/one_hundred"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/out_of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out_of"
        android:textSize="18sp"

        android:layout_alignBaseline="@id/grade_points"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/max_grade_points"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_alignBaseline="@+id/grade_points"
        android:hint="@string/one_hundred"
        android:inputType="number"
        android:textSize="18sp" />
    <Button
        android:id="@+id/button_add_grade_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:layout_marginBottom="@dimen/big_padding"
        android:background="@android:color/transparent"
        android:textColor="@color/colorDialogButtons"
        android:layout_below="@id/grade_points"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/button_no_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_grade"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/grade_points"
        android:background="@android:color/transparent"
        android:textColor="@color/colorDialogButtons" />
    <Button
        android:id="@+id/button_add_grade_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grade_points"
        android:text="@string/button_save"
        android:layout_marginBottom="@dimen/big_padding"
        android:background="@android:color/transparent"
        android:textColor="@color/colorDialogButtons"
        android:layout_alignParentEnd="true" />
</android.widget.RelativeLayout>