<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/add_class_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/button_color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_name"
        android:layout_alignLeft="@id/course_name"
        android:text="Select Color:"
        android:textSize="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/button_color"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@id/course_name"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:padding="0dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="43dp"
        android:layout_marginTop="12dp"
        android:text="..."
        android:textColor="@color/colorWhite" />

    <View
        android:id="@+id/color_square"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/course_name"
        android:layout_toLeftOf="@id/button_color"
        android:layout_marginRight="10dp"
        android:background="#000000"
        android:visibility="visible" />

    <TextView
        android:id="@+id/spinner_icon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_square"
        android:layout_alignLeft="@id/course_name"
        android:text="Select Icon:"
        android:textSize="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp" />

    <Spinner
        android:id="@+id/spinner_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color_square"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/small_padding"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/icon_button"
        android:textColor="@color/colorWhite" />


    <Button
        android:id="@+id/button_addcourse_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_icon"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:background="@android:color/transparent"
        android:text="@string/button_cancel"
        android:textColor="@color/colorDialogButtons" />

    <Button
        android:id="@+id/button_addcourse_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_icon"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:background="@android:color/transparent"
        android:text="@string/button_save"
        android:textColor="@color/colorDialogButtons" />

</RelativeLayout>